<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="@drawable/sfondo6"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Credits">


    <TextView
        android:background="@color/colorWhite"
        android:layout_below="@id/textView1"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email" />

    <TextView
        android:background="@color/colorWhite"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creator" />

    <TextView
        android:background="@color/colorWhite"
        android:layout_below="@id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:id="@+id/textView1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/request" />

    <TextView
        android:background="@color/colorWhite"
        android:layout_below="@id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:id="@+id/textView2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/project" />

    <TextView
        android:background="@color/colorWhite"
        android:layout_below="@id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/relatore" />




</RelativeLayout>